--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "cookie-auth": "^2.4.2",
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.6",
-    "helmet": "latest",
+    "helmet": "^3.15.0",
     "js-md5": "^0.7.3",
     "js-sha256": "^0.9.0",
     "mongoose": "^5.4.6",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "ws": "^6.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
